nemo-gitops/apps/base/agents/streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-ui
  template:
    metadata:
      labels:
        app: streamlit-ui
    spec:
      containers:
      - name: streamlit-ui
        image: 668102661106.dkr.ecr.us-east-1.amazonaws.com/streamlit-ui:latest
        ports:
        - containerPort: 8501
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: output-volume
          mountPath: /data-designer-output
      volumes:
      - name: data-volume
        emptyDir: {}
      - name: output-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: streamlit-ui
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: streamlit-ui
  ports:
  - port: 8501
    targetPort: 8501
  type: LoadBalancer # Expose to user
